tests/programs/invalid/volatile.java
public class volatile {
    public volatile int x;
}